--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -8,4 +8,4 @@ elixir_version=1.0.2
 always_rebuild=false
 
 # Export heroku config vars
-# config_vars_to_export=DATABASE_URL
+config_vars_to_export=(DATABASE_URL ASANA_API_KEY)
