--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,11 +1,5 @@
-# Erlang version
-erlang_version=17.2
-
-# Elixir version
+erlang_version=17.3.4
 elixir_version=1.0.2
-
-# Always rebuild from scratch on every deploy?
-always_rebuild=false
-
-# Export heroku config vars
-config_vars_to_export=(DATABASE_URL ASANA_API_KEY)
+always_rebuild=true
+config_vars_to_export=(ASANA_API_KEY)
+# config_vars_to_export=(DATABASE_URL)
